# browser_shell_os

./: .gitignore  CLAUDE.md  CMakeLists.txt  README.md  SECURITY.md
docs/: ARCHITECTURE.md  HANDOFF.md  README.md
docs/dashboard/: README.md
docs/dashboard/Logging_shell_real.Report/definition/pages/: pages.json
docs/dashboard/Logging_shell_real.Report/definition/pages/ringhop/: page.json
docs/dashboard/Logging_shell_real.Report/definition/pages/ringhop/visuals/barStrategy/: visual.json
docs/dashboard/Logging_shell_real.Report/definition/pages/ringhop/visuals/c1/: visual.json
docs/dashboard/Logging_shell_real.Report/definition/pages/ringhop/visuals/c2/: visual.json
docs/dashboard/Logging_shell_real.Report/definition/pages/ringhop/visuals/c3/: visual.json
docs/dashboard/Logging_shell_real.Report/definition/pages/ringhop/visuals/c4/: visual.json
docs/dashboard/Logging_shell_real.Report/definition/pages/ringhop/visuals/c5/: visual.json
docs/dashboard/Logging_shell_real.Report/definition/pages/ringhop/visuals/colHops/: visual.json
docs/dashboard/Logging_shell_real.Report/definition/pages/ringhop/visuals/donutStage/: visual.json
docs/dashboard/Logging_shell_real.Report/definition/pages/ringhop/visuals/hdr/: visual.json
docs/dashboard/Logging_shell_real.Report/definition/pages/trends/visuals/hdr/: visual.json
docs/dashboard/Logging_shell_real.SemanticModel/definition/: model.tmdl
docs/dashboard/Logging_shell_real.SemanticModel/definition/tables/: HopDist.tmdl  HopStages.tmdl  HopStrategies.tmdl
docs/plans/: feature-interactive-fan.md  stage-4.md  stage-5.md
docs/research/: win11-taskbar-geometry.md
packaging/: install.ps1  uninstall.ps1
profiler/: Contract.h  EtwSession.cpp  EtwSession.h  MetricsView.h  README.md  main.cpp
profiler/captures/: fan_activate_breakdown_long.csv
src/: ConfigWatcher.cpp  DockWindow.cpp  DockWindow.h  FanPopup.cpp  FanPopup.h  HostWindow.cpp  HostWindow.h  Launcher.cpp  Launcher.h  PaintUtil.h  Renderer.cpp  Renderer.h  Store.cpp  Store.h  TabHop.h  TabReader.cpp  TabReader.h  TaskbarOverlayWindow.cpp  TaskbarOverlayWindow.h  Trace.cpp  Trace.h  WindowMonitor.cpp  WindowMonitor.h  main.cpp
